sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: not found: value blue
    if (getColor(afterBlue)==blue){
                             ^DutchFlagAlgo:9: error: not found: value red
    }else if (getColor(afterBlue)==red){
                                   ^DutchFlagAlgo:13: error: not found: value afterblue
      swap(afterblue,WhiteRed)
           ^